--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@
 /* Mid Text */
 .mid-text {
     text-align: center;
-    /* padding:30px 0; */
     margin: 50px 0;
 }
 .mid-text2 {
@@ -48,20 +47,19 @@
     padding-top: 20px;
 }
 
-/* Donate Plan */
+/* Donate Amount Choice */
 .donate-amount {
     display: flex;
-    margin-left: 520px;
-    margin-right: 520px;
+    margin: 0px 490px;
     margin-bottom: 50px;
     justify-content: space-evenly;
 }
 .donate-amount p {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 600;
     color: #707070;
     background-color: #FAFAFA;
-    padding: 25px 20px;
+    padding: 20px 15px;
     border-radius: 5px;
 }
 .donate-amount p:hover {
@@ -74,7 +72,6 @@
     color: #FF5959;
 }
 
-/* Donate Plan Choice */
 .donate-plan-choice {
     text-align: center;
     margin-bottom: 30px;
@@ -82,11 +79,62 @@
     color: #B3B3B3;
 }
 hr {
-    margin: 0px 535px;
+    margin: 0px 505px;
     margin-top: 5px;
     margin-bottom: 30px;
-    background-color: #da1818;
 }
 .donate-btn {
     margin-top: 20px;
 }
+
+/* Donate Plan */
+.our-plan {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+.our-plan h1 {
+    font-size: 30px;
+}
+
+/* Donate Plan Card */
+.donate-plan-card {
+    display: flex;
+    margin: 0px 260px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+
+}
+.donate-plan-card img {
+    padding-bottom: 10px;
+}
+.donate-plan-card h1 {
+    padding-bottom: 10px;
+}
+.card1 {
+    padding: 60px 25px;
+    background-color:  #4F9DA61A;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+.card1:hover {
+    background-color: #69a0b579;
+}
+.card2 {
+    padding: 60px 25px;
+    background-color:  #FF59591A;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+.card2:hover {
+    background-color: #de9a9a60;
+}
+.card3 {
+    padding: 60px 25px;
+    background-color:  #FFF4D6;
+    border-radius: 5px;
+}
+.card3:hover {
+    background-color: #f7e6b8;
+}
+
