--- a/style.css
+++ b/style.css
@@ -138,3 +138,13 @@ hr {
     background-color: #f7e6b8;
 }
 
+footer {
+    color: #FAFAFA;
+    text-align: center;
+    background-color: black;
+    padding: 30px 0px;
+}
+footer h1 {
+    color: #e92929;
+    padding-bottom: 10px;
+}
